--- a/week-1/2-html-attributes/index.html
+++ b/week-1/2-html-attributes/index.html
@@ -33,7 +33,7 @@
         <p class="message__content">
           Ok!
         </p>
-        <img src="https://media.giphy.com/media/l41K4KlVE8dgozf8I/giphy.gif" alt="">
+        <img src="https://media.giphy.com/media/l41K4KlVE8dgozf8I/giphy.gif" alt="gif see you soon!">
         <span class="message__time">7:38pm</span>
       </div>
     </div>
