--- a/week-1/4-links-scripts/index.html
+++ b/week-1/4-links-scripts/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>4. Adding Links and Scripts - HTML, CSS and Git Exercises</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
 
-  <body>
-    <div class="site-wrapper">
-      <div class="site-header">
-        <div class="site-header__title">Messages</div>
+<head>
+  <meta charset="utf-8" />
+  <title>4. Adding Links and Scripts - HTML, CSS and Git Exercises</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="/week-1/4-links-scripts/css/missing-styles.css">
+  <!-- També podem col·locar l'enllaç del script al head, però posant "defer" per assegurar-nos que s'executa quan ja s'ha llegit el DOM -->
+  <script defer src="/week-1/4-links-scripts/js/convertUrls.js"></script>
+</head>
+
+<body>
+  <div class="site-wrapper">
+    <div class="site-header">
+      <div class="site-header__title">Messages</div>
+    </div>
+    <div class="messages">
+      <div class="message">
+        <div class="message__author">Won</div>
+        <p class="message__content">Where should we meet later?</p>
+        <time class="message__time">7:25pm</time>
       </div>
-      <div class="messages">
-        <div class="message">
-          <div class="message__author">Won</div>
-          <p class="message__content">Where should we meet later?</p>
-          <time class="message__time">7:25pm</time>
-        </div>
-        <div class="message">
-          <div class="message__author">Luke</div>
-          <p class="message__content">
-            Let's meet at the iCafe in Merchant City. https://goo.gl/maps/aza4h9nUBhn
-          </p>
-          <time class="message__time">7:35pm</time>
-        </div>
-        <div class="message">
-          <div class="message__author">Won</div>
-          <p class="message__content">
-            No, I prefer the one on Sauchiehall Street. https://goo.gl/maps/wKDoARcHDp42
-          </p>
-          <time class="message__time">7:38pm</time>
-        </div>
+      <div class="message">
+        <div class="message__author">Luke</div>
+        <p class="message__content">
+          Let's meet at the iCafe in Merchant City. https://goo.gl/maps/aza4h9nUBhn
+        </p>
+        <time class="message__time">7:35pm</time>
+      </div>
+      <div class="message">
+        <div class="message__author">Won</div>
+        <p class="message__content">
+          No, I prefer the one on Sauchiehall Street. https://goo.gl/maps/wKDoARcHDp42
+        </p>
+        <time class="message__time">7:38pm</time>
       </div>
     </div>
-  </body>
+  </div>
+
+  <!-- <script src="/week-1/4-links-scripts/js/convertUrls.js"></script> -->
+</body>
+
 </html>
